--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -2,6 +2,10 @@ version: 2
 sphinx:
   configuration: docs/conf.py
 formats: html
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.12"
 python:
   version: 3.7
   install:
